--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="{{site.baseurl}}/index.html">Home</a></li>
-        <li><a href="{{site.baseurl}}/about.html">About</a></li>
+        <li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
+        <li><a href="{{site.baseurl}}/permaculture-articles.html" class="{% if page.url == '/permaculture-articles.html' %}current{% endif %}">Permaculture Articles</a></li>
     </ul>
 </nav>
