--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <nav>
     <ul>
         <li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
-        <li><a href="{{site.baseurl}}/permaculture-articles.html" class="{% if page.url == '/permaculture-articles.html' %}current{% endif %}">Permaculture</a></li>
-        <li><a href="{{site.baseurl}}/art-articles.html" class="{% if page.url == '/art-articles.html' %}current{% endif %}">Arts</a></li>
-        <li><a href="{{site.baseurl}}/rewilding-articles.html" class="{% if page.url == '/rewilding-articles.html' %}current{% endif %}">Rewilding</a></li>
-        <li><a href="{{site.baseurl}}/activism-articles.html" class="{% if page.url == '/activism-articles.html' %}current{% endif %}">Activism</a></li>
-        <li><a href="{{site.baseurl}}/philosophy-articles.html" class="{% if page.url == '/philosophy-articles.html' %}current{% endif %}">Philosophy</a></li>
+        <li><a href="{{site.baseurl}}/permaculture.html" class="{% if page.url contains 'permaculture' %}current{% endif %}">Permaculture</a></li>
+        <li><a href="{{site.baseurl}}/arts.html" class="{% if page.url contains 'arts' %}current{% endif %}">Arts</a></li>
+        <li><a href="{{site.baseurl}}/rewilding.html" class="{% if page.url contains 'rewilding' %}current{% endif %}">Rewilding</a></li>
+        <li><a href="{{site.baseurl}}/activism.html" class="{% if page.url contains 'activism' %}current{% endif %}">Activism</a></li>
+        <li><a href="{{site.baseurl}}/philosophy.html" class="{% if page.url contains 'philosophy' %}current{% endif %}">Philosophy</a></li>
         <li><a href="">Search</a></li>
     </ul>
 </nav>
