--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
             </a>
             
         </header>
-
-        {{content}}
+        <div id="content">
+            {{content}}
+        </div>
         <footer>
         <!-- {% include nav.html %} -->
         </footer>
