--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{page.meta}}">
 </head>
 <body>
-    <div id = "main-container"> 
+    <div id = "top-container"> 
         <header>
             {% include nav.html %}
             <a href="{{site.baseurl}}/" id="home-link">
@@ -14,6 +14,10 @@
             </a>
             
         </header>
+
+    </div>
+
+    <div id="main-container">
         <div id="content">
             {{content}}
         </div>
