--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <header>
             {% include nav.html %}
             <a href="{{site.baseurl}}/" id="home-link">
-                <img src="../img/logo.png" id="logo">
+                <img src="{{site.baseurl}}/img/logo.png" id="logo">
             </a>
             
         </header>
