created footer, social media links, and about page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="{{site.baseurl}}/off-grid.html" class="brush {% if page.url contains 'off-grid' %}current{% endif %}">Off Grid</a></li>
             <li><a href="{{site.baseurl}}/philosophy.html" class="brush {% if page.url contains 'philosophy' %}current{% endif %}">Philosophy</a></li>
-            <li><a href="#" class="brush">Search</a></li>
+            <li><a href="{{site.baseurl}}/about.html" class="brush {% if page.url contains 'about' %}current{% endif %}">About</a></li>
         </ul>
     </div>
 </nav>
