--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>{% if page.title %}{{page.title}} - {% endif %} Earthly Wilds{% if page.titleAfter %} - {{page.titleAfter}}{% endif %}</title>
     <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="description" content="{{page.meta}}">
 </head>
 <body>
@@ -21,9 +22,6 @@
         <div id="content">
             {{content}}
         </div>
-        <footer>
-        <!-- {% include nav.html %} -->
-        </footer>
     </div>
 </body>
 </html>
