--- a/css/common.css
+++ b/css/common.css
@@ -31,6 +31,7 @@ body{
     font-weight: bold;
 }
 
+
 ul {
     display: inline;
     padding: 0;
@@ -58,6 +59,11 @@ nav li {
 }
 nav a {
     color: #611b15;
+    transition: 0.6s
+}
+
+nav a:hover{
+    color:396509;
 }
 
 nav {
@@ -222,3 +228,37 @@ ul li {
     color: #611b15;
 }
   /****************** END category pages ********************/
+
+
+
+
+  /****************** START footer ********************/
+footer{
+    height: 230px;
+    /* background-color: gray; */
+    background-image: url("../img/pines-footer.png");
+    background-repeat: no-repeat;
+    background-size: 100%;  
+    width: 100%;
+    margin-top: -15px;
+    text-align: center;
+    font-size: 40px;
+}
+footer a {
+    color: #396509;
+    margin: 100px 40px 40px 0;
+    opacity: 50%;
+    transition: 0.6s;
+}
+
+footer a:hover {
+    opacity: 100%
+}
+
+
+
+  /****************** END footer ********************/
+
+  
+
+
