added search icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 <body>
     <div id = "top-container"> 
         <header>
+            <a href="#" class="fa fa-search" id="search-icon"></a>
             {% include nav.html %}
             <a href="{{site.baseurl}}/" id="home-link">
                 <img src="{{site.baseurl}}/img/logo.png" id="logo">
