--- a/css/common.css
+++ b/css/common.css
@@ -24,6 +24,21 @@ body{
     z-index: -1;
 }
 
+#search-icon{
+    padding-top: 40px;
+    margin-bottom: -50px; /*pulls the search ison on top of the header*/
+    font-size: 40px;
+    color: #611b15;
+    transition: 0.6s;
+    opacity: 50%;
+    position: absolute;
+    right: 95px;
+}
+
+#search-icon:hover {
+    opacity: 100%;
+}
+
 /***********START NAV************/
 
 .current { /*highlight the current page of the nav*/
