--- a/css/common.css
+++ b/css/common.css
@@ -158,6 +158,10 @@ ul li {
     /* border-radius: 0 0 10px 10px; */
 }
 
+.post-textbox .brush{
+    padding: 0 20px 0 20px;
+}
+
 .posts {
     -webkit-column-count: 3;
     -webkit-column-gap:   0px;
@@ -220,10 +224,12 @@ ul li {
 
 .latest-textbox a {
     color: #611b15;
+    padding: 0 20px 0 20px;
 }
 
 .latest-textbox p {
-    margin-bottom: -10px;
+    margin-top: 45px;
+    margin-bottom: -7px;
     color: #611b15;
 }
 
@@ -249,8 +255,13 @@ ul li {
 
 
   /****************** START Search page ********************/
-#search-page {
+#non-post-page {
     width: 1400px;
+    background-color: rgba(255,255,255,.5);
+    min-height: 700px;
+}
+#non-post-page p {
+ padding: 20px;
 }
 
 #search-container {
@@ -259,13 +270,26 @@ ul li {
     /* text-align: center; */
     margin-right: auto;
     margin-left: auto;
+}
 
+#results-container li{
+    margin-top: 10px;
+    padding: 20px;
+    background-color: rgba(255,255,255,.6);
+    box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.2);
+}
+
+#results-container a{
+    color: #611b15;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 #search-input{
     width: 100%;
     height: 40px;
     font-size: 35px;
+    /* border: 3px solid #611b15; */
 }
 
 /* #results-container {
