--- a/css/common.css
+++ b/css/common.css
@@ -202,7 +202,7 @@ ul li {
     height: 350px;
     object-fit: none;
     opacity: 50%;   
-    transition: 0.6s;
+    /* transition: 0.6s; */
     margin-top: 20px;
 }
 
@@ -319,7 +319,7 @@ footer a {
     color: #396509;
     margin: 100px 40px 40px 0;
     opacity: 50%;
-    transition: 0.6s;
+    /* transition: 0.6s; */
 }
 
 footer a:hover {
