--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,12 @@
     <div id = "top-container"> 
         <header>
             <a href="{{site.baseurl}}/search.html" class="fa fa-search" id="search-icon"></a>
+            <div id="menu-toggle">
+                <label for="hamburger">&#9776;</label>
+                <input type="checkbox" id="hamburger"/>
+            
             {% include nav.html %}
+            </div>
             <a href="{{site.baseurl}}/" id="home-link">
                 <img src="{{site.baseurl}}/img/logo.png" id="logo">
             </a>
