--- a/css/common.css
+++ b/css/common.css
@@ -454,6 +454,13 @@ footer a:hover {
 
 @media (max-width: 800px) {
 
+
+    nav  {
+        visibility: hidden;
+    }
+
+     #hamburger:checked ~ nav{visibility: visible;}
+
     #top-container{
         height: 170px;
     }
@@ -463,8 +470,22 @@ footer a:hover {
     }
 
 
-    #nav-left, #nav-right {
-        visibility: hidden;
+    /* #nav-left, #nav-right {
+        
+    } */
+
+    #nav-right ul{
+        float: left;
+    }
+
+
+    #nav-right ul, #nav-left ul {
+        float: none;
+    }
+
+
+    nav li {
+        display: block;
     }
 
     #logo {
@@ -512,6 +533,7 @@ footer a:hover {
         height: 300px;
     }
 }
+
 
 
 @media (max-width: 360px) {
