made the hamburger menu pretty

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,9 @@
         <header>
             <a href="{{site.baseurl}}/search.html" class="fa fa-search" id="search-icon"></a>
             <div id="menu-toggle">
-                <label for="hamburger">&#9776;</label>
+                <label for="hamburger" id="hamburger-icon">&#9776;</label>
                 <input type="checkbox" id="hamburger"/>
-            
-            {% include nav.html %}
+                {% include nav.html %} <!-- the nav has to be inside of the hamburger toggle-->
             </div>
             <a href="{{site.baseurl}}/" id="home-link">
                 <img src="{{site.baseurl}}/img/logo.png" id="logo">
