--- a/css/common.css
+++ b/css/common.css
@@ -492,7 +492,7 @@ footer a:hover {
 
 
     nav a {
-        padding: 30px;
+        padding: 10px 50px 0 30px;;
         font-size: 35px;
     }
      #hamburger:checked ~ nav{
@@ -511,7 +511,7 @@ footer a:hover {
 
 
     #logo {
-        margin-top: -520px;
+        margin-top: -480px;
     }
 
 
@@ -534,7 +534,7 @@ footer a:hover {
         float: none;
     }
     #nav-right li, #nav-left li {
-        padding: 10px;
+        /* padding: 10px; */
         background: rgba(255,255,255,.9);
         margin: 0;
         /* text-align: center; */
