--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,8 +2,9 @@
 layout: default
 comments: true
 ---
-<h1>{{page.title}}</h1>
 
-{{content}}
-
+<article>
+    <h1>{{page.title}}</h1>
+    {{content}}
+</article>
 
