<800 px article tiles looks better

--- a/css/common.css
+++ b/css/common.css
@@ -467,7 +467,9 @@ footer a:hover {
 
 @media (max-width: 800px) {
 
-
+    .post-textbox {
+        margin-top: -162px;
+    }
 
 
     article{
@@ -517,10 +519,6 @@ footer a:hover {
         z-index: 2
    }
 
-
-
-
-
      #hamburger-icon {
         visibility: visible; 
         color: #611b15;
@@ -530,17 +528,15 @@ footer a:hover {
     }
 
 
-
-
-
     #top-container{
-        height: 170px;
+        /* height: 170px; */
     }
 
-    #main-container {
-        margin-top: -310px;
-    }
 
+    #category-title{
+      padding-top: 10px;  
+      margin-bottom: -5px;
+    }
 
     #nav-right ul{
         float: left;
@@ -572,7 +568,7 @@ footer a:hover {
     }
 
     #latest {
-        visibility: hidden;
+        display: none;
     }
 
     #search-icon{
