--- a/css/common.css
+++ b/css/common.css
@@ -286,7 +286,7 @@ nav {
 #non-post-page {
     width: 1400px;
     background-color: rgba(255,255,255,.5);
-    min-height: 700px;
+    min-height: 100%;
 }
 #non-post-page p {
  padding: 20px;
@@ -361,6 +361,14 @@ footer a:hover {
 
 
 @media (max-width: 1400px) {
+
+    /* #main-content, #top-container, body{
+        width: 100%;
+    } */
+
+    #non-post-page {
+        width: 100%;
+    }
 
 
     body {
@@ -473,7 +481,7 @@ footer a:hover {
 
 
     article{
-        margin-top: 500px;
+        /* margin-top: 500px; */
     }
 
     #nav-right{
