--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% if page.title %}{{page.title}} - {% endif %} Earthly Wilds{% if page.titleAfter %} - {{page.titleAfter}}{% endif %}</title>
+    <link href="{{site.baseurl}}/css/normalize.css" rel="stylesheet">
     <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--enables responsive layout on smartphones-->
